# aws-doc-sdk-examples

.doc_gen/metadata/: iam_metadata.yaml  s3_metadata.yaml
gov2/dynamodb/crud-service/: .env  go.mod  go.sum  server.go
gov2/dynamodb/crud-service/api/: api.go  create.go  delete.go  email_template.txt  redirect.go  report.go  stats.go
gov2/dynamodb/crud-service/cmd/server/: server.go
gov2/dynamodb/crud-service/cmd/server/web/: index.html  main.html
gov2/dynamodb/crud-service/cmd/setup/: setup.go
gov2/dynamodb/crud-service/db/: dynamo.go  logic.go  model.go
gov2/dynamodb/crud-service/web/: index.html
scripts/metadata-tool/: pyproject.toml
scripts/metadata-tool/metatool/: metatool.py
scripts/metadata-tool/metatool/cmd/: split.py  validate.py
templates/: README.md  sdk-cross-top.md  sdk.md  service.md
